<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateAccount_Screen1">

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/textView38"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/arrowback6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/baseline_arrow_back_24" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:baselineAligned="false"
            android:gravity="center"
            android:text="@string/app"
            android:textSize="20dp"
            android:textStyle="bold" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="26dp"
        android:text="@string/ProfessionalSignup_Btn"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView39"
        app:layout_constraintStart_toStartOf="@+id/textView39"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/editTextText11"
        app:layout_constraintStart_toStartOf="@+id/editTextText11"
        app:layout_constraintTop_toBottomOf="@+id/textView38" />

    <EditText
        android:id="@+id/editTextText11"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/roundbox"
        android:ems="10"
        android:hint="@string/entername"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/textView32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView39" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress22"
        app:layout_constraintStart_toStartOf="@+id/editTextText11"
        app:layout_constraintTop_toBottomOf="@+id/editTextText11" />

    <EditText
        android:id="@+id/editTextTextEmailAddress22"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="49dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/roundbox"
        android:ems="10"
        android:hint="@string/enteremail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/textView33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView32" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:text="@string/pass"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword00"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress22"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress22" />

    <EditText
        android:id="@+id/editTextTextPassword00"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="49dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/roundbox"
        android:ems="10"
        android:hint="@string/enterpassword"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/textView36"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/phone"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhone33"
        app:layout_constraintStart_toStartOf="@+id/editTextText22"
        app:layout_constraintTop_toBottomOf="@+id/editTextText22" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/roundbox"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toStartOf="@+id/editTextPhone33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView34" />

    <EditText
        android:id="@+id/editTextPhone33"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/roundbox"
        android:ems="10"
        android:hint="@string/enterphone"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinner3"
        app:layout_constraintTop_toBottomOf="@+id/textView34" />

    <Button
        android:id="@+id/button99"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/dark_color"
        android:text="@string/ProfessionalSignup_Btn"
        app:layout_constraintBottom_toTopOf="@+id/textView35"
        app:layout_constraintEnd_toEndOf="@+id/editTextPhone33"
        app:layout_constraintStart_toStartOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="7dp"
        android:text="@string/already"
        app:layout_constraintBottom_toTopOf="@+id/button100"
        app:layout_constraintEnd_toEndOf="@+id/button100"
        app:layout_constraintTop_toBottomOf="@+id/button99" />

    <Button
        android:id="@+id/button100"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/loginBtn"
        android:textColor="@color/dark_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button99"
        app:layout_constraintStart_toEndOf="@+id/spinner3"
        app:layout_constraintTop_toBottomOf="@+id/textView35" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="7dp"
        android:text="@string/qualification"
        app:layout_constraintBottom_toTopOf="@+id/editTextText22"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword00"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword00" />

    <EditText
        android:id="@+id/editTextText22"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="49dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/roundbox"
        android:ems="10"
        android:hint="@string/enterqualification"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/textView34"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="74dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="8dp"
        android:text="@string/terms"
        app:layout_constraintBottom_toTopOf="@+id/button99"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone33" />


</androidx.constraintlayout.widget.ConstraintLayout>